# -api-

./: README.md  pyproject.toml
movie_api/: db.sqlite3  manage.py  movie_in_actors.json
movie_api/movie_api/: settings.py  urls.py
movie_api/movies/: models.py  serializers.py  urls.py  views.py
movie_api/movies/migrations/: 0001_initial.py  0002_rename_opening_date_movie_opening_data.py  0003_actor.py  0004_rename_opening_data_movie_opening_date.py  0005_review.py  0006_alter_review_movie.py  0007_movie_actors.py
